# NLP-Website-Classification

./: README.md  pyproject.toml
app/: app.py  s3_client.py
notebooks/: 01_EDA.ipynb  02_Feature_Engineering.ipynb  03_Modeling.ipynb
