[project]
name = "website-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.42.64",
    "bs4>=0.0.2",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.55.0",
]
